<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/_8sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_style_top_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/_48sdp"
            android:layout_height="@dimen/_48sdp"
            android:layout_marginVertical="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:contentDescription="@string/description_link_image"
            android:src="@drawable/ic_amazon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewLinkName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:ellipsize="end"
            android:maxLines="1"
            android:fontFamily="@font/figtree_regular"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toStartOf="@+id/textViewCount"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            tools:text="Sample Link Name" />

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/text_light"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/figtree_regular"
            app:layout_constraintEnd_toStartOf="@+id/textViewClicks"
            app:layout_constraintStart_toStartOf="@+id/textViewLinkName"
            app:layout_constraintTop_toBottomOf="@+id/textViewLinkName"
            tools:text="22 Aug 2022" />

        <TextView
            android:id="@+id/textViewCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12sdp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="@font/figtree_semibold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textViewLinkName"
            tools:text="2323" />

        <TextView
            android:id="@+id/textViewClicks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/clicks"
            android:textColor="@color/text_light"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/figtree_regular"
            app:layout_constraintEnd_toEndOf="@+id/textViewCount"
            app:layout_constraintTop_toBottomOf="@+id/textViewCount" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/copy_link_style"
        android:paddingVertical="@dimen/_4sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container1">

        <TextView
            android:id="@+id/textViewLink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginVertical="@dimen/_8sdp"
            android:ellipsize="end"
            android:maxLines="1"
            android:fontFamily="@font/figtree_regular"
            android:textColor="@color/blue_text"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageViewCopy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="https://samplelink.oia.bio/ashd..." />

        <ImageView
            android:id="@+id/imageViewCopy"
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:contentDescription="@string/description_image_copy_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_copy" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>